Fixed homework1 and link

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Интересные факты о дизайне сайтов</title>
-		<link rel="stylesheet" href="css/reset.css" type="text/css">
+		<link rel="stylesheet" href="../css/reset.css" type="text/css">
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 	</head>	
 	<body>
@@ -15,8 +15,8 @@
 			залогом успешных продаж. Хороший дизайн – это такой внешний вид веб-сайта,
 		 	который приходится по вкусу и соответствует ожиданиям целевой аудитории
 		 	продукта, который на нем продается.</p>
-			<p>Давайте пройдемся по семерке важных фактов про дизайн с точки зрения маркетинга.</p><br>
-			<p><span>Факт №1.</span> Посетителю необходимо менее секунды для оценки дизайна (и всего сайта)</p>
+			<p>Давайте пройдемся по семерке важных фактов про дизайн с точки зрения маркетинга.</p>
+			<h2><span>Факт №1.</span> Посетителю необходимо менее секунды для оценки дизайна (и всего сайта)</h2>
 			<p>Вспомним известную русскую пословицу: «встречают по одежке – а провожают 
 			по уму». Это актуально и для сайтов. Поскольку свое первое впечатление от 
 			сайта пользователь составляет на основании его дизайна. По информации 
@@ -28,20 +28,23 @@
 			 Не запутывайте людей. Сайты консалтинговых компаний делаются на основе одной структуры,
 			 сайты по сборке и ремонту мебели по другой. Просто соответствуйте этой структуре и не
 		 	изобретайте велосипед. Так, вы не запутаете пользователя.</p>
-			<p>Дизайн должен соответствовать специфике отрасли, находится вблизи к общепринятым
+			<p>Дизайн должен соответствовать специфике отрасли, находится вблизи 
+			 к общепринятым
 			 стандартам этой сферы (остальные сайты этой же области). И, конечно же, он должен
-			 отвечать ожиданиям потенциальных клиентов.</p><br>
-			<p><span>Факт №2.</span> Логотип и слоган</p>
+			 отвечать ожиданиям потенциальных клиентов.</p>
+			<h2><span>Факт №2.</span>Логотип и слоган</h2>
 			<p>Логотип и слоган должны четко давать понять, куда посетитель зашел. Пользователь
 		 	еще не читал ваш текст и заголовки. В связи с этим на первый план выходит слоган.
 		 	Необходимо, чтобы он отражал направление деятельности компании. А если он отразит
 		 	какие-то преимущества или уникальные отличия – это будет вообще замечательно.</p>
-			<p>Несколько примеров:</p>
-			<p>Коттеджные поселки</p>
-			<p class="text_cursive">Ваш представитель в суде<br>
-			Напольные покрытия из натуральных материалов<br>
-			Натяжные потолки</p><br>
-			<p><span>Факт №3.</span> Продавать сайт должен до линии сгиба</p>
+			<p>Несколько примеров:
+			<ul>
+				<li>Коттеджные поселки</li>		
+				<li>Ваш представитель в суде<li>
+				<li>Напольные покрытия из натуральных материалов<li>
+				<li>Натяжные потолки</li>
+			</ul></p>
+			<h2><span>Факт №3.</span> Продавать сайт должен до линии сгиба</h2>
 			<p>Сайт должен понравиться посетителю. Если этого не произойдет, он не пролистает
 		 	дальше. Ведь, выше мы уже упоминали, что первое впечатление о сайте формируется у
 		 	посетителя меньше, чем за 1 секунду. Вряд ли он будет скролить за это время ваш сайт.</p>
@@ -49,25 +52,25 @@
 		 	веб-сайта. Для создания хорошего впечатления шапка сайта должна быть яркой, содержать
 		 	слоган, призыв к действию, контакты (телефон). На главной странице рекомендуют 
 		 	размещать промо-блоки с акциями.</p>
-			<p><a href="#">Выбор дизайна исходя из целевой аудитории</a></p><br>
-			<p><span>Факт №4.</span> Визуальная составляющая</p>
+			<p><a href="#">Выбор дизайна исходя из целевой аудитории</a></p>
+			<h2><span>Факт №4.</span> Визуальная составляющая</h2>
 			<p>Мы уже обсудили с вами, что нестандартный дизайн необходимо использовать очень
 		 	осторожно, поскольку не всегда он нужен. При этом визуальной красотой ресурса не
 		 	следует пренебрегать. Потенциальные клиенты за последние несколько десятилетий
 		 	стали очень разборчивы, они начинают понимать, что отличает любительский сайт
 		 	от дорогого профессионального дизайна. Поэтому графическое воплощение вашего
-		 	сайта должно быть на должном уровне.</p><br>
-			<p><span>Факт №5.</span> Дизайн текста</p>
+		 	сайта должно быть на должном уровне.</p>
+			<h2><span>Факт №5.</span> Дизайн текста</h2>
 			<p>Даже супер убеждающий и продающий текст не сработает без правильного дизайна.
 		 	Читабельность текста – одна из основ успешного, продающего сайта. Важно ориентировать
 		 	текст на беглый просмотр. Поскольку лишь единицы пользователей станут читать ваш
 		 	текст от корки до корки. Все же большинство просто пробегает по тексту глазами,
 		 	задерживаясь на самых важных для себя моментах. Поэтому важные моменты должны быть
-			сразу же заметны.</p><br>
-			<p><span>Факт №6.</span> Призывы к действию</p>
+			сразу же заметны.</p>
+			<h2><span>Факт №6.</span> Призывы к действию</h2>
 			<p>Яркие, заметные, понятные. Каждая целевая страница на веб-сайте должна логически
-			завершаться призывом к действию.</p><br>
-			<p><span>Факт№7.</span> Тестируйте</p>
+			завершаться призывом к действию.</p>
+			<h2><span>Факт№7.</span> Тестируйте</h2>
 			<p>Тестируйте различные варианты элементов и их расположения. Сравнивайте и выбирайте лучшие.</p>
 		</div>	
 	</body>	
