--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<body>
 		<ul>
 			<li>
-				<a href="Home_work1/index.html" ><font size="15">Home work 1</font></a>
+				<a href="homework1/index.html" ><font size="15">Home work 1</font></a>
 			</li>
 			<li>
-				<a href="Home_work2/index.html" ><font font size="15">Home work 2</font></a>	
+				<a href="homework2/index.html" ><font font size="15">Home work 2</font></a>	
 			</li>
 			<li>
-				<a href="Home_work3/index.html" ><font size="15">Home work 3(form)</font></a>
+				<a href="homework3/index.html" ><font size="15">Home work 3(form)</font></a>
 			</li>
 			<li>
-				<a href="Home_work4/index.html" ><font size="15">Home work 4(table)</font></a>
+				<a href="homework4/index.html" ><font size="15">Home work 4(table)</font></a>
 			</li>
 		</ul>
 	</body>
