--- a/homework2/index.html
+++ b/homework2/index.html
@@ -69,7 +69,7 @@
 				devices for multimedia content. Finally, "CD ripping" became a trivial method for content injection.
 			</p>
 			<p class="pic1">
-				<img  src="Images/1.png" alt="image1">
+				<img  src="images/1.png" alt="image1">
 			</p>
 			<p class="thirdpar">
 				The first embodiments of this new darknet were central internet servers with large 
@@ -92,7 +92,7 @@
 				Additionally, management, auditing, and accountability are much easier in a centralized model.
 			</p>
 			<p class="pic2">
-				<img  src="Images/2.png" alt="image2">
+				<img  src="images/2.png" alt="image2">
 			</p>
 			<p>
 				However, centralized schemes work poorly for illegal object distribution because large, central 
