--- a/homework3/index.html
+++ b/homework3/index.html
@@ -8,13 +8,10 @@
 	<body>
 		<ul>
 			<li>
-				<a href="homework1/index.html" ><font size="15">Home work 1</font></a>
+				<a href="Form/index.html" ><font size="15">Form</font></a>
 			</li>
 			<li>
-				<a href="homework2/index.html" ><font font size="15">Home work 2</font></a>	
-			</li>
-			<li>
-				<a href="homework3/index.html" ><font size="15">Home work 3(form&table)</font></a>
+				<a href="Table/index.html" ><font font size="15">Table</font></a>	
 			</li>
 		</ul>
 	</body>
