--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 			<li>
 				<a href="homework3/index.html" ><font size="15">Home work 3(form&table)</font></a>
 			</li>
+			<li>
+				<a href="homework4/index.html" ><font size="15">Home work 4</font></a>
+			</li>
 		</ul>
 	</body>
 </html>
