--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 			<li>
 				<a href="homework4/index.html" ><font size="15">Home work 4</font></a>
 			</li>
+			<li>
+				<a href="homework5/index.html" ><font size="15">Home work 5</font></a>
+			</li>
 		</ul>
 	</body>
 </html>
