--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<li>
 				<a href="homework5/index.html" ><font size="15">Home work 5</font></a>
 			</li>
+			<li>
+				<a href="homework6/index.html" ><font size="15">Home work 6</font></a>
+			</li>
 		</ul>
 	</body>
 </html>
