--- a/homework6/index.html
+++ b/homework6/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300,100,500|Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,300,100,500|Roboto+Slab:400,300,100,700" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="wrapper">
