--- a/homework6/index.html
+++ b/homework6/index.html
@@ -174,7 +174,7 @@
   <footer>
     <div class="container">
       <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      <p>Try awsome tool for desgners <span><a href="#">symu.co</a></span></p>
+      <p>Try awsome tool for desgners <a href="#"><span>symu.co</span></a></p>
     </div>
   </footer>
 </div>
