--- a/homework6/index.html
+++ b/homework6/index.html
@@ -36,25 +36,19 @@
         </div>
         <ul>
           <li>
-            <article>
               <img src="img/tincidunt.png" alt="Tincidunt">
-              <h3>Tincidunt</h3>
+              <h2>Tincidunt</h2>
               <p>Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus egestas efficitur. Sed quam dolor.</p>
-            </article>
           </li>
           <li>
-            <article>
               <img src="img/bibendum.png" alt="bibendum">
-              <h3>Duis bibendum</h3>
+              <h2>Duis bibendum</h2>
               <p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst.</p>
-            </article>
           </li>
           <li>
-            <article>
               <img src="img/donec.png" alt="Donec">
-              <h3>Donec ligula</h3>
+              <h2>Donec ligula</h2>
               <p>Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.</p>
-            </article>
           </li>
         </ul>
         <a href="#" class="button">Read more</a>
@@ -63,26 +57,24 @@
 
     <section class="news">
       <div class="container">
-        <div class="title-news">
-          <h1>Our news</h1>
-        </div>
+        <h1>Our news</h1>
         <div class="list-news">
           <ul>
             <li>
               <img src="img/lorem1.png" alt="lorem1">
-              <h3>Lorem ipsum</h3>
+              <h2>Lorem ipsum</h2>
               <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
               <a href="#" class="button">Read more</a>
             </li>
             <li>
               <img src="img/lorem2.png" alt="lorem2">
-              <h3>Lorem ipsum</h3>
+              <h2>Lorem ipsum</h2>
               <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
               <a href="#" class="button">Read more</a>
             </li>
             <li>
               <img src="img/lorem3.png" alt="lorem3">
-              <h3>Lorem ipsum</h3>
+              <h2>Lorem ipsum</h2>
               <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
               <a href="#" class="button">Read more</a>
             </li>
@@ -93,7 +85,7 @@
 
     <section class="newsletter">
       <div class="container">
-        <h2>Newsletter</h2>
+        <h1>Newsletter</h1>
         <p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo,
         ullamcorper non diam sit amet, luctus condimentum metus</p>
         <form action="#" method="get">
@@ -134,38 +126,30 @@
 
     <section class="bottom-list">
       <div class="container">
-        <ul>  
-          <li>
-            <ul>
-              <li>Ad litora torquent</li>
-              <li>Per conubia</li>
-              <li>Nostra</li>
-              <li>Per inceptos</li>
-              <li>Himenaeos</li>
-              <li>In consectetur</li>
-            </ul>
-          </li>
-          <li>
-            <ul>
-              <li>Taciti sociosqu</li>
-              <li>Ad litora torquent</li>
-              <li>Per conubia</li>
-              <li>Himenaeos</li>
-              <li>In consectetur</li>
-              <li>Nisi sed blandit</li>
-              <li>Tincidunt</li>
-            </ul>
-          </li>
-          <li>
-            <ul>
-              <li>Nostra</li>
-              <li>Per inceptos</li>
-              <li>Himenaeos</li>
-              <li>In consectetur</li>
-              <li>Nisi sed blandit</li>
-              <li>Tincidunt</li>
-            </ul>
-          </li>
+        <ul>
+          <li>Ad litora torquent</li>
+          <li>Per conubia</li>
+          <li>Nostra</li>
+          <li>Per inceptos</li>
+          <li>Himenaeos</li>
+          <li>In consectetur</li>
+        </ul>
+        <ul>
+          <li>Taciti sociosqu</li>
+          <li>Ad litora torquent</li>
+          <li>Per conubia</li>
+          <li>Himenaeos</li>
+          <li>In consectetur</li>
+          <li>Nisi sed blandit</li>
+          <li>Tincidunt</li>
+        </ul>
+        <ul>
+          <li>Nostra</li>
+          <li>Per inceptos</li>
+          <li>Himenaeos</li>
+          <li>In consectetur</li>
+          <li>Nisi sed blandit</li>
+          <li>Tincidunt</li>
         </ul>
       </div>
     </section>
@@ -173,8 +157,8 @@
 
   <footer>
     <div class="container">
-      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      <p>Try awsome tool for desgners <a href="#"><span>symu.co</span></a></p>
+      <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>
+      Try awsome tool for desgners <a href="#"><span>symu.co</span></a></p>
     </div>
   </footer>
 </div>
