--- a/homework8/index.html
+++ b/homework8/index.html
@@ -66,10 +66,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project one</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project one</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
           <li>
             <figure class="portfolio-page">
@@ -79,10 +80,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project Two</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project Two</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
           <li>
             <figure class="portfolio-page">
@@ -92,10 +94,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project Three</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project Three</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
           <li>
             <figure class="portfolio-page">
@@ -105,10 +108,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project one</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project one</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
           <li>
             <figure class="portfolio-page">
@@ -118,10 +122,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project one</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project one</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
           <li>
             <figure class="portfolio-page">
@@ -131,10 +136,11 @@
                   <a href="#" class="button">Read more</a>
                 </div>  
               </div>
-            <div class="description">
-              <h2>Project one</h2>
-              <a href="#">Web Design</a>
-            </div>
+	          <div class="description">
+	            <h2>Project one</h2>
+	            <a href="#">Web Design</a>
+	          </div>
+            </figure>
           </li>
         </ul>
       </div>
