--- a/homework6/index.html
+++ b/homework6/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Panakeia</title>
   <link rel="stylesheet" type="text/css" href="../css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
+  <link href="css/media.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,300,100,500|Roboto+Slab:400,300,100,700" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -98,15 +100,16 @@
       <div class="container">
         <ul>
           <li>
+           <div class="content-img">
+              <img src="img/rectangle-1.jpg" alt="rectangle-1">
+           </div>
            <div class="content-text"> 
             <h3>Ipsum dolor sit amet</h3>
             <p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
             <p>Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
             <a href="#" class="button">Sign up</a>
            </div>
-           <div class="content-img">
-              <img src="img/rectangle-1.jpg" alt="rectangle-1">
-           </div>
+           
           </li>
           <li>
             <div class="content-img">
