--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 			<li>
 				<a href="homework8/index.html" ><font size="15">Home work 8</font></a>
 			</li>
+			<li>
+				<a href="homework10/index.html" ><font size="15">Home work 10</font></a>
+			</li>
 		</ul>
 	</body>
 </html>
