--- a/homework10/index.html
+++ b/homework10/index.html
@@ -22,7 +22,7 @@
         <div class="l-col-6 m-col-8 text-right">
           <nav>
             <ul>
-              <li><a href="#">fork-edit</a></li>
+              <li><a href="#">Overview</a></li>
               <li><a href="#">About Fork</a></li>
               <li><a href="#">Buying Options</a></li>
               <li><a href="#">Support</a></li>
@@ -52,9 +52,23 @@
     <div class="container text-center">
       <h2>Revolutionary editor</h2>
       <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
-      <div class="">  
-        <a href="#"><img class="watch" src="img/watch.png" alt="watch"></a>
-      </div>
+      <ul>
+        <li>
+          <a href="#">
+            <span><i class="fa fa-eye"></i>Watch</span>1,397
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span><i class="fa fa-star"></i>Star</span>21,038
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span><i class="fa fa-code-fork"></i>Fork</span>4,391
+          </a>
+        </li>
+      </ul>
     </div> 
   </section>
 
@@ -62,6 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="l-col-6 m-col-6">
+          <h2 class="visible_1">&lt;Here is what you get&gt;</h2>
           <ul>
             <li>
               <div class="img-box text-center">
@@ -102,7 +117,7 @@
           </ul>
         </div>
         <div class="l-col-6 m-col-6">
-          <h2 class="visible-md visible-lg">&lt;Here is what you get&gt;</h2>
+          <h2 class="visible_2">&lt;Here is what you get&gt;</h2>
           <img class="img-appear" src="img/get.png" alt="get">
         </div>
       </div> 
@@ -111,16 +126,24 @@
 
   <section class="fork-stev">
     <div class="container">
-        <figure>
-          <img src="img/stev.png" alt="Stev">
-          <div class="author">
-            <h3>Steven Strange</h3>
-            <a href="#">@DoctorS</a>
-          </div>
-        </figure>
-        <p><a href="#">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
-        <span>2 hours ago</span>
-      </div> 
+      <div class="wrapper-fork">  
+        <div class="content-slide">
+          <figure>
+            <img src="img/stev.png" alt="Stev">
+            <div class="author">
+              <h3>Steven Strange</h3>
+              <a href="#">@DoctorS</a>
+            </div>
+          </figure>
+          <p><a href="#">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
+          <span>2 hours ago</span>
+        </div>
+        <div class="arrow-slide">
+            <img src="img/arrow-l.png" alt="arrow-l">
+            <img src="img/arrow-r.png" alt="arrow-r">
+        </div>
+      </div>  
+    </div> 
   </section> 
 
   <section class="social-networks">
