--- a/homework8/index.html
+++ b/homework8/index.html
@@ -18,7 +18,7 @@
       <h1><a href="#">UIBrush<span>.</span></a></h1>
     </div>
     <nav>
-      <ul>
+      <ul class="mobile-menu hidden-sm hidden-md hidden-lg">
         <li><a href="#">HOME</a></li>
         <li><a href="#">ABOUT US</a></li>
         <li><a href="#">PORTFOLIO</a></li>
