--- a/homework10/index.html
+++ b/homework10/index.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" type="text/css" href="css/simplegrid.css">
   <link href="css/media.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
+
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,300,700,600,400italic,700italic,600italic,300italic|Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  
+ 
 </head>
 <body>
   <header>
@@ -125,25 +128,45 @@
   </section> 
 
   <section class="fork-stev">
-    <div class="container">
-      <div class="wrapper-fork">  
-        <div class="content-slide">
-          <figure>
-            <img src="img/stev.png" alt="Stev">
-            <div class="author">
-              <h3>Steven Strange</h3>
-              <a href="#">@DoctorS</a>
-            </div>
-          </figure>
-          <p><a href="#">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
-          <span>2 hours ago</span>
-        </div>
-        <div class="arrow-slide">
-            <img src="img/arrow-l.png" alt="arrow-l">
-            <img src="img/arrow-r.png" alt="arrow-r">
-        </div>
-      </div>  
-    </div> 
+  	<div class="container">
+  		<div class="slider">
+  			<div class="slider-content">
+  				<div class="slide">
+  					<figure>
+  						<img src="img/stev.png" alt="Stev">
+  						<div class="author">
+  							<h3>Jon Strange</h3>
+  							<a href="#">@DoctorS</a>
+  						</div>
+  					</figure>
+  					<p><a href="#">@Pixelbuddha</a> Suspendisse sodales , in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
+  					<span>2 hours ago</span>
+  				</div>
+  				<div class="slide">
+  					<figure>
+  						<img src="img/stev.png" alt="Stev">
+  						<div class="author">
+  							<h3>Sten Strange</h3>
+  							<a href="#">@DoctorS</a>
+  						</div>
+  					</figure>
+  					<p><a href="#">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
+  					<span>2 hours ago</span>
+  				</div>
+  				<div class="slide">
+  					<figure>
+  						<img src="img/stev.png" alt="Stev">
+  						<div class="author">
+  							<h3>Steven Strange</h3>
+  							<a href="#">@DoctorS</a>
+  						</div>
+  					</figure>
+  					<p><a href="#">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque felis scelerisque in.  Praesent sit amet erat eget eros.</p>
+  					<span>2 hours ago</span>
+  				</div>
+  			</div>
+  		</div>
+  	</div>  
   </section> 
 
   <section class="social-networks">
@@ -366,4 +389,7 @@
       </div>
     </div> 
   </footer> 
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="js/slider.js"></script>
 </body>
+</html>
