--- a/homework11/11/index.html
+++ b/homework11/11/index.html
@@ -36,7 +36,31 @@
                 </nav>
             </div>
         </header>
-        <div class="carousel">
+        
+        <div class="slider">
+            <div class="slider-content">
+                <div class="slide"><div class="item">
+                <div class="main">
+                    <h1>We design &  medium level business& develop qaulity products to help small.</h1>
+                    <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpa</p>
+                </div>
+            </div></div>
+                <div class="slide"><div class="item">
+                <div class="main">
+                    <h1>We design & develop qaulity products to help small.</h1>
+                    <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpa</p>
+                </div>
+            </div></div>
+                <div class="slide"><div class="item">
+                <div class="main">
+                    <h1>We design & develop qaulity products to help small & medium level business.</h1>
+                    <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpa</p>
+                </div>
+            </div></div>
+                
+            </div>
+        </div>
+      <!--   <div class="carousel">
             <div class="item">
                 <div class="main">
                     <h1>We design & develop qaulity products to help small & medium level business.</h1>
@@ -44,7 +68,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> -->
 </section>
 <!-- client-->
 <section class="firm">
@@ -350,5 +374,7 @@
     </div>
 </footer>
 <script src="js/map.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="js/slider.js"></script>
 </body>
 </html>
