--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<a href="homework8/index.html" ><font size="15">Home work 8</font></a>
 			</li>
 			<li>
-				<a href="homework10/index.html" ><font size="15">Home work 10</font></a>
+				<a href="homework10/index.html" ><font size="15">Home work 10(slider)</font></a>
 			</li>
 			<li>
-				<a href="homework11/index.html" ><font size="15">Home work 11(Atom&Ethanol)</font></a>
+				<a href="homework11/index.html" ><font size="15">Home work 11(Atom(slider)&Ethanol)</font></a>
 			</li>
 			<li>
 				<a href="homework13/index.html" ><font size="15">Home work 13</font></a>
