--- a/homework15/atom/index.html
+++ b/homework15/atom/index.html
@@ -340,7 +340,7 @@
             <h1>What is Special About Atom App</h1>
             <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum.</p>
         </div>
-        <form action="form.php" method="GET" role="form" id="form" onsubmit="return validateForm()">
+        <form action="form.php" method="POST" role="form" id="form" onsubmit="return validateForm()">
             <ul>
                 <li>
                     <input type="text"  name="username" placeholder="Your Name">
